# tracy

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
rasty/: README.md  cargo.toml  rustfmt.toml
rasty/rasty/: Cargo.toml
src/: main.rs
tracy/: Cargo.toml
tracy/render/: test.ppm
tracy/src/: main.rs
tracy/tracy_export/: Cargo.toml
tracy/tracy_export/src/: lib.rs
tracy/tracy_macros/src/: lib.rs
tracy/tracy_macros_attr/src/: fields.rs  lib.rs
tracy/tracy_macros_derive/src/: lib.rs  random.rs
tracy/tracy_macros_helper/: Cargo.toml
tracy/tracy_macros_helper/src/: lib.rs
tracy/tracy_math/src/: arr_store.rs  point.rs  unit.rs
tracy/tracy_render_view/src/: app.rs  dispatcher.rs  lib.rs  window.rs
tracy/tracy_scene/src/: geo.rs  scene.rs
tracy/tracy_traits/: Cargo.toml
tracy_benchmark/: Cargo.toml
tracy_benchmark/src/: lib.rs  main.rs
tracy_export/: Cargo.toml
tracy_export/src/: lib.rs
tracy_import/: Cargo.toml
tracy_import/src/: lib.rs
tracy_macros/: Cargo.toml
tracy_macros/src/: lib.rs  math.rs
tracy_macros_attr/: Cargo.toml
tracy_macros_attr/src/: attr.rs  lib.rs  op.rs  ops.rs
tracy_macros_derive/: Cargo.toml
tracy_macros_derive/src/: color.rs  convert.rs  lib.rs  neg.rs  random.rs
tracy_macros_helper/: Cargo.toml
tracy_macros_helper/src/: lib.rs  struct_arr_store.rs  utils.rs
tracy_macros_impl/: Cargo.toml
tracy_macros_impl/src/: io.rs  lib.rs  math.rs  neg.rs  random.rs
tracy_math/: Cargo.toml
tracy_math/src/: color.rs  lib.rs  num.rs  point.rs  ray.rs  unit.rs  vec.rs
tracy_render/: Cargo.toml
tracy_render/src/: lib.rs  ray.rs
tracy_render_view/: Cargo.toml
tracy_render_view/shaders/: shaders.wgsl
tracy_render_view/src/: app.rs  graphics.rs  lib.rs  render.rs  state.rs
tracy_render_view/src/graphics/: wgpu.rs
tracy_scene/: Cargo.toml
tracy_scene/src/: cam.rs  geo.rs  keyframe.rs  lib.rs  mat.rs  scene.rs  sphere.rs
tracy_scene/src/geo/: sphere.rs
tracy_traits/: Cargo.toml
tracy_traits/src/: lib.rs
