[package]
name = "tracy"
version = "0.1.0"
edition = "2024"

[dependencies]
tracy_export = { version = "0.1.0", path = "../tracy_export" }
tracy_import = { version = "0.1.0", path = "../tracy_import" }
tracy_render = { version = "0.1.0", path = "../tracy_render" }
tracy_render_view = { version = "0.1.0", path = "../tracy_render_view" }
tracy_scene = { version = "0.1.0", path = "../tracy_scene" }
clap = { version = "4.5.46", features = ["derive"] }
rand = "0.9.2"
