[package]
name = "tracy_render"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rayon = "1.11.0"
tracy_macros = { version = "0.1.0", path = "../tracy_macros" }
tracy_math = { version = "0.1.0", path = "../tracy_math" }
tracy_scene = { version = "0.1.0", path = "../tracy_scene" }
tracy_traits = { version = "0.1.0", path = "../tracy_traits" }
